tests/lang/compile_fail/missing_struct_field.kojs
struct User
  name: String
  age: Int
end

u = User{age: 30}
u.age.print()
